--- a/angular.json
+++ b/angular.json
@@ -137,7 +137,7 @@
       }
     }
   },
-  "defaultProject": "Potogas",
+  "defaultProject": "material-dashboard-angular",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
