--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "4.17.1",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
+    "jexcel": "^3.9.1",
     "jquery": "3.4.1",
     "moment": "2.24.0",
     "perfect-scrollbar": "1.1.0",
