--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-server": "8.0.0",
     "@angular/router": "8.0.0",
     "ajv": "6.10.0",
+    "angular5-social-login": "^1.0.9",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
     "bootstrap-material-design": "4.1.2",
